--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "semi": true,
   "tabWidth": 2,
   "trailingComma": "none",
-  "arrowParens": "avoid",
-  "bracketSpacing": false
+  "arrowParens": "avoid"
 }
