--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "mongoose": "^6.8.2"
+    "pg": "^8.8.0",
+    "sequelize": "^6.28.0"
   }
 }
